# quidditch

./: .dockerignore  .gitignore  .gitmodules  .golangci.yml  AGGREGATIONS_COMPLETE.md  AGGREGATION_FEATURE_MATRIX.md  ANALYZER_FRAMEWORK_COMPLETE.md  ARCHITECTURE_CLEANUP_PLAN.md  CGO_INTEGRATION_COMPLETE.md  CI_CD_SUMMARY.md  CONTROL_PLANE_ARCHITECTURE_SUMMARY.md  CPP_INTEGRATION_GUIDE.md  CURRENT_STATUS.md  DATA_NODE_INTEGRATION_PART1.md  DATA_NODE_INTEGRATION_PART2.md  DATA_NODE_SHARD_LOADING_COMPLETE.md  DIAGON_ANALYZER_FRAMEWORK_DESIGN.md  DIAGON_INTEGRATION_PLAN.md  DIAGON_INTEGRATION_STATUS.md  DIAGON_ITERATOR_BUG_FIX_COMPLETE.md  DIAGON_ITERATOR_CACHING_BUG_ANALYSIS.md  DIAGON_MISSING_QUERY_TYPES.md  DIAGON_PHASE4_LIMITATIONS.md  DIAGON_UNIFIED_RANGE_QUERY_BUG.md  DOCUMENTATION_INDEX.md  DOCUMENT_RETRIEVAL_BUG_ANALYSIS.md  DOCUMENT_RETRIEVAL_STATUS.md  DOUBLE_RANGE_QUERY_IMPLEMENTATION.md  DOUBLE_RANGE_QUERY_IMPLEMENTATION_COMPLETE.md  E2E_TEST_RESULTS.md  EXPRESSION_PARSER_INTEGRATION.md  FAILURE_TESTING_REPORT.md  FILTERS_AGGREGATION.md  FINAL_SESSION_SUMMARY.md  GO_INTEGRATION_TEST_RESULTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_PHASES_1_AND_2.md  INTER_NODE_SCALING_PHASE1_COMPLETE.md  K8S_ARCHITECTURE_ANALYSIS.md  K8S_NATIVE_SUMMARY.md  (+92 more)
.github/: dependabot.yml  pull_request_template.md
config/: METRICS_GUIDE.md  dev-coordination.yaml  dev-master.yaml  docker-coordination.yaml  docker-data.yaml  docker-master.yaml  prometheus.yml
design/: API_EXAMPLES.md  CLICKHOUSE_COMPARISON.md  CLICKHOUSE_LEARNINGS_SUMMARY.txt  COST_ANALYSIS.md  DESIGN_SUMMARY.md  DEVELOPMENT_SETUP.md  GETTING_STARTED.md  IMPLEMENTATION_KICKOFF.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  INTERFACE_SPECIFICATIONS.md  KUBERNETES_DEPLOYMENT.md  MIGRATION_GUIDE.md  PPL_ARCHITECTURE_DESIGN.md  PPL_IMPLEMENTATION_PLAN.md  PPL_PUSHDOWN_AND_OPTIMIZATION_RESEARCH.md  PPL_TIER_PLAN.md  PROJECT_KICKOFF.md  PROJECT_SUMMARY.txt  PYTHON_PIPELINE_GUIDE.md  QUERY_PLANNER_DECISION.md  QUIDDITCH_ARCHITECTURE.md  SECURITY_ARCHITECTURE.md  SESSION_SUMMARY_2026-01-25.txt  WASM_UDF_DESIGN.md  WASM_UDF_SUMMARY.txt  WHATS_NEW.md  calcite_optimization_rules_research.md
docs/: BANDWIDTH_AND_RESOURCES_QUICK_REF.md  DUAL_MODE_CONTROL_PLANE.md  K8S_NATIVE_DEEP_DIVE.md  KUBERNETES_DEPLOYMENT_GUIDE.md  MASTER_NODE_ARCHITECTURE.md  PERFORMANCE_TUNING.md  PIPELINE_FRAMEWORK.md  QUERY_CACHE_CONFIGURATION.md  QUERY_PLANNER_ARCHITECTURE.md
examples/udfs/string-distance/: Cargo.toml  README.md  build.sh
examples/udfs/string-distance/src/: lib.rs
pkg/data/diagon/: CMakeLists.txt  C_API_INTEGRATION.md  README.md  README_CPP.md  TASKS_8-10_COMPLETION.md  TEST_COVERAGE_REPORT.md  TEST_RESULTS.txt  UNIT_TEST_SUMMARY.md  advanced_aggregations_test.go  advanced_features_test.go  advanced_search_test.go  analysis.go  analysis_test.go  bridge.go  bridge_cgo_test.go  build.sh  build_c_api.sh  build_minimal.sh  cgo_wrapper.h  coverage.html  distributed_search.cpp  distributed_search.h  distributed_search_test.go  document.cpp  document.h  document_indexing_test.go  document_store.cpp  document_store.h  double_range_test.go  expression_evaluator.cpp  expression_evaluator.h  integration_test.go  minimal_wrapper.cpp  query_conversion_test.go  search_integration.cpp  search_integration.h  shard_manager.cpp  shard_manager.h
pkg/data/diagon/c_api_src/: MatchAllQuery.cpp  MatchAllQuery.h  diagon_c_api.cpp  diagon_c_api.h  minimal_wrapper.h
pkg/data/diagon/tests/: document_test.cpp  expression_test.cpp  search_integration_test.cpp
scripts/: README.md  deploy-k8s.sh  init-dev-environment.sh
test/: benchmark_indexing.sh  benchmark_query.sh  benchmark_query_simple.sh  e2e_safe.sh  (+13 more)
(+161 files in other folders)
